--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,414 +1,417 @@
 @import url("style.css");
 
 main {
-   margin: 0 100px; 
+  margin: 0 100px;
 }
 
-#contact-modal, #lightbox-modal {
-    margin: auto;
-    max-width: 1400px;
+#contact-modal,
+#lightbox-modal {
+  margin: auto;
+  max-width: 1400px;
 }
 
 .photograph-header {
-    background-color: #FAFAFA;
-    height: 250px;
-    display: flex;
-    flex-direction: row;
+  background-color: #fafafa;
+  height: 250px;
+  display: flex;
+  flex-direction: row;
 }
 
 .photograph-header ul {
-    margin: 0;
-    padding: 0 40px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  margin: 0;
+  padding: 0 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .photograph-header li {
-    display: block;
+  display: block;
 }
 
 .photograph-header h1 {
-    margin: 10px 0;
-    font-size: 2.2rem;
-    color: #D3573C;
+  margin: 10px 0;
+  font-size: 2.2rem;
+  color: #d3573c;
 }
 
 .photograph-header h2 {
-    margin: 10px 0;
-    font-size: 1.2rem;
-    color: #901C1C;
+  margin: 10px 0;
+  font-size: 1.2rem;
+  color: #901c1c;
 }
 
 .photograph-header p {
-    margin: 10px 0;
-    color: #525252;
+  margin: 10px 0;
+  color: #525252;
 }
 
 .contact-button {
-    border: none;
-    border-radius: 5px;
-    font-weight: bold;
-    color: #FAFAFA;
-    background-color: #901C1C;
-    cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  color: #fafafa;
+  background-color: #901c1c;
+  cursor: pointer;
 }
 
 .photograph-header .contact-button {
-    padding: 11px;
-    width: 170px;
-    height: 60px;
-    font-size: 18px;
+  padding: 11px;
+  width: 170px;
+  height: 60px;
+  font-size: 18px;
 }
 
 .photograph-header img {
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
 }
 
 .modal form .contact-button {
-    width: 140px;
-    height: 60px;
-    font-size: 16px;
+  width: 140px;
+  height: 60px;
+  font-size: 16px;
 }
 
 #contact-modal {
-    display: none;
-    position: absolute;
-    top: 60px;
-    width: 100%;
+  display: none;
+  position: absolute;
+  top: 60px;
+  width: 100%;
 }
 
 .modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
+  border-radius: 5px;
+  background-color: #db8876;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 35px;
+  margin: auto;
 }
 
 .modal header {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: auto;
 }
 
 .modal header button {
-    border: none;
-    background: transparent;
-    height: 42px;
+  border: none;
+  background: transparent;
+  height: 42px;
 }
 
 .modal img {
-    width: 42px;
-    height: 42px;
-    cursor: pointer;
+  width: 42px;
+  height: 42px;
+  cursor: pointer;
 }
 
 .modal h2 {
-    margin: 0;
-    font-size: 44px;
-    font-weight: normal;
+  margin: 0;
+  font-size: 44px;
+  font-weight: normal;
 }
 
 .modal form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .modal div {
-    margin-bottom: 26px;
-    width: 100%;
+  margin-bottom: 26px;
+  width: 100%;
 }
 
 .modal form div:nth-child(1) {
-    text-align: center;
+  text-align: center;
 }
 
 .photograph-header .contact-button:hover,
 .photograph-header .contact-button:focus {
-    background-color: #D3573C;
-    color: #000;
+  background-color: #d3573c;
+  color: #000;
 }
 
 .modal form label {
-    color: #312E2E;
-    font-size: 30px;
+  color: #312e2e;
+  font-size: 30px;
 }
 
 .modal form input {
-    border: none;
-    border-radius: 5px;
-    width: 100%;
-    height: 68px;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+  height: 68px;
 }
 
 .modal form textarea {
-    width: 100%;
-    height: 180px;
+  width: 100%;
+  height: 180px;
 }
 
 .filter {
-    margin: 10px 0 40px 0;
-    height: 60px;
+  margin: 10px 0 40px 0;
+  height: 60px;
 }
 
 .filter form {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    height: inherit;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: inherit;
 }
 
 .media ul {
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px 90px;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px 90px;
 }
 
 .media li {
-    display: block;
+  display: block;
 }
 
 .media figure {
-    margin: 0;
+  margin: 0;
 }
 
-.media img, .media video {
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.media img,
+.media video {
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .btn-media {
-    border: none;
-    border-radius: 5px;
-    padding: 0;
-    width: 340px;
-    height: 340px;
-    cursor: pointer;
-    background-color: inherit;
+  border: none;
+  border-radius: 5px;
+  padding: 0;
+  width: 340px;
+  height: 340px;
+  cursor: pointer;
+  background-color: inherit;
 }
 
 .media button:focus {
-    outline: 1px auto;
+  outline: 1px auto;
 }
 
 .media button span {
-    display: none;
+  display: none;
 }
 
 .media figcaption {
-    margin: 8px 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  margin: 8px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .media figcaption header {
-    height: 30px;
+  height: 30px;
 }
 
 .media h3 {
-    margin: 0;
-    color: #901C1C;
+  margin: 0;
+  color: #901c1c;
 }
 
 .media figcaption figure {
-    margin: 0;
-    color: #901C1C;
+  margin: 0;
+  color: #901c1c;
 }
 
 .media b {
-    padding-right: 5px;
+  padding-right: 5px;
 }
 
 .btn-like-media {
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    background-color: inherit;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  background-color: inherit;
 }
 
 .btn-like-media i {
-    color: #901C1C;
+  color: #901c1c;
 }
 
 .price-and-likes {
-    position: fixed;
-    right: 30px;
-    bottom: 0px;
-    border-radius: 5px 5px 0 0;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 300px;
-    height: 40px;
-    font-size: 1.2rem;
-    background-color: #D3573C;
+  position: fixed;
+  right: 30px;
+  bottom: 0px;
+  border-radius: 5px 5px 0 0;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 300px;
+  height: 40px;
+  font-size: 1.2rem;
+  background-color: #d3573c;
 }
 
 .price-and-likes i {
-    margin-left: 5px;
+  margin-left: 5px;
 }
 
 .dropdown-wrapper {
-    position: relative;
-    border: none;
-    border-radius: 5px;
-    appearance: none;
-    height: 40px;
-    width: 140px;
-    background-color: #901C1C;
-    color: #FFF;
-    font-size: inherit;
-    cursor: pointer;
+  position: relative;
+  border: none;
+  border-radius: 5px;
+  appearance: none;
+  height: 40px;
+  width: 140px;
+  background-color: #901c1c;
+  color: #fff;
+  font-size: inherit;
+  cursor: pointer;
 }
 
 .dropdown-wrapper .dropdown-ul {
-    position: absolute;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    opacity: 0;
-    transition: .3s;
-    width: 100%;
-    color: #FFF;
+  position: absolute;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  opacity: 0;
+  transition: 0.3s;
+  width: 100%;
+  color: #fff;
 }
 
 .dropdown-wrapper .dropdown-label::after {
-    position: absolute;
-    right: 15px;
-    content: ' >';
-    transform: var(--selectdivAfterTransform, rotate(90deg));
-    pointer-events: none;
+  position: absolute;
+  right: 15px;
+  content: " >";
+  transform: var(--selectdivAfterTransform, rotate(90deg));
+  pointer-events: none;
 }
 
 .dropdown-wrapper .dropdown-ul li {
-    margin-top: 0;
-    padding: 0 10px 10px 10px;
-    background-color: #901C1C;
+  margin-top: 0;
+  padding: 0 10px 10px 10px;
+  background-color: #901c1c;
 }
 
 .dropdown-wrapper .dropdown-ul li:last-child {
-    border-radius: 0 0 5px 5px;
+  border-radius: 0 0 5px 5px;
 }
 
 .dropdown-wrapper .dropdown-ul a {
-    display: block;
-    padding-left: 5px;
-    text-decoration: none;
-    color: #FFF;
+  display: block;
+  padding-left: 5px;
+  text-decoration: none;
+  color: #fff;
 }
 
 .dropdown-wrapper .dropdown-label {
-    position: relative;
-    right: 0;
-    border-radius: 5px;
-    padding: 10px;
-    display: block;
-    cursor: pointer;
+  position: relative;
+  right: 0;
+  border-radius: 5px;
+  padding: 10px;
+  display: block;
+  cursor: pointer;
 }
 
 hr {
-    margin: 0;
-    color: #FFF;
+  margin: 0;
+  color: #fff;
 }
 
 .dropdown-ul li:nth-child(1) {
-    display: none;
+  display: none;
 }
 
 input[type="checkbox"] {
-    display: none;
+  display: none;
 }
 
 #lightbox-modal {
-    position: absolute;
-    top: 60px;
-    display: none;
-    width: 100%;
+  position: absolute;
+  top: 60px;
+  display: none;
+  width: 100%;
 }
 
 .content-modal {
-    position: relative;
-    margin: auto;
-    border-radius: 5px;
-    padding: 0 50px;
-    background-color: #FFF;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 70%;
+  position: relative;
+  margin: auto;
+  border-radius: 5px;
+  padding: 0 50px;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
 }
 
 .content-modal .close-lightbox-modal {
-    position: absolute;
-    top: 30px;
-    right: 40px;
+  position: absolute;
+  top: 30px;
+  right: 40px;
 }
 
 #lightbox-modal em {
-    color: #901C1C;
+  color: #901c1c;
 }
 
 #lightbox-modal figure h3 {
-    margin-top: 5px;
-    color: #D3573C;
+  margin-top: 5px;
+  color: #d3573c;
 }
 
 .carousel {
-    position: relative;
-    margin: 20px;
-    overflow: hidden;
-    width: 100%;
+  position: relative;
+  margin: 20px;
+  overflow: hidden;
+  width: 100%;
 }
 
 .carousel-container {
-    padding: 0;
+  padding: 0;
 }
 
 .carousel-item {
-    float: left;
+  float: left;
 }
 
-.close-contact-modal, 
+.close-contact-modal,
 .close-lightbox-modal,
 .carousel-prev,
 .carousel-next {
-    border: none;
-    background-color: inherit;
-    height: 30px;    
-    padding: 0;
+  border: none;
+  background-color: inherit;
+  height: 30px;
+  padding: 0;
 }
 
-.close-contact-modal:focus, 
+.close-contact-modal:focus,
 .close-lightbox-modal:focus,
 .carousel-prev:focus,
 .carousel-next:focus,
 .contact-button:focus {
-    outline: 1px auto;
+  outline: 1px auto;
 }
 
 .item {
-    margin: 0;
+  margin: 0;
 }
 
-.item img, .item video {
-    width: 100%;
-    height: 680px;
-    object-fit: cover;
+.item img,
+.item video {
+  width: 100%;
+  height: 680px;
+  object-fit: cover;
 }
